--- a/style.css
+++ b/style.css
@@ -4,43 +4,89 @@
     padding: 0;
     box-sizing: border-box;
 }
+body{
+    font-family: Whitney, 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  }
+
 header{
-    background-color: #add8e6;
+    background-image: url(img/jumbo.png);
     width: 100%;
-    height: 100px;
+    height: 700px;
     padding-top: 20px;
+    background-size: cover;
 }
 .flex{
     display: flex;
     justify-content: center;
+    align-items: flex-start;
+
 
 }
-.container{
+.container {
     max-width: 1200px;
     margin: 0 auto;
 }
 
+
+/* header */
 .logo, .bottone, .login, .nav {
-    height: 50px;
-    background-color: #daa520;
+    display: flex;
+    align-items: center;
+    height: 70px;
     flex-basis: 20%;
+    
+}
+
+ul{
+    display: flex;
+    justify-content:space-around;
+    list-style-type:none;
+    width: 100%;
+    color: white;
+}
+
+.login{
+    
+    display: flex;
+    justify-content: flex-end;
+}
+
+.button{
+    height: 40px;
+    background-color: white;
+    border-radius: 25px;
+    display: flex;
+    align-items: center;
+    padding: 0px 15px;
+}
+
+h1{
+    font-size: 2.5em;
+}
+p{
+    padding: 30px 100px 15px 100px;
+    font-size: 1em;
+    text-align: center;
+}
+
+
+
+.descriptionbox{
+    height: 400px;
     border: 2px solid black;
+    color: white;
+    font-size: 25px;
+    text-align: center;
+    width: 80%;
+    padding-top: 100px;
 }
 
 footer{
     background-color: #202124;
     width: 100%;
 }
-.descriptionbox{
-    height: 400px;
-    background-color: #ee82ee;
-    flex-basis: 50%;
-    border: 2px solid black;
-    margin: 50px;
-}
-main{
-    background-color: #00008b;
-}
+
+
 
 .blue-column{
     height: 400px;
@@ -66,6 +112,7 @@ main{
     flex-basis: 100%;
     border: 2px solid black;
     margin: 50px 0;
+   
 }
 .info{
     height: 700px;
