--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body{
 header{
     background-image: url(img/jumbo.png);
     width: 100%;
-    height: 700px;
+    height: 600px;
     padding-top: 20px;
     background-size: cover;
 }
@@ -36,6 +36,9 @@ header{
     flex-basis: 20%;
     
 }
+.nav-bar{
+    background-color: #3161e0;
+}
 
 ul{
     display: flex;
@@ -54,26 +57,44 @@ ul{
 .button{
     height: 40px;
     background-color: white;
-    border-radius: 25px;
+    border-radius: 35px;
     display: flex;
     align-items: center;
     padding: 0px 15px;
+    color: black;
 }
 
 h1{
     font-size: 2.5em;
 }
 p{
-    padding: 30px 100px 15px 100px;
+    padding: 50px 0px 25px 0px;
     font-size: 1em;
     text-align: center;
 }
+.flex-button{
+    display: flex;
+    justify-content: center;
+}
+.scarica, .apri{
+    padding: 30px;
+    margin-right: 30px;
+}
 
+.apri{
+    background-color: #23272a;
+    color: white;
+}
+
+
+.scarica:before {
+    content: '\01F82B';
+    margin-right: 10px;
+}
 
 
 .descriptionbox{
     height: 400px;
-    border: 2px solid black;
     color: white;
     font-size: 25px;
     text-align: center;
