--- a/style.css
+++ b/style.css
@@ -101,22 +101,33 @@ p{
     text-align: center;
     width: 80%;
     padding-top: 100px;
+    display: flex;
 }
 .pink-column > h1{
     font-size: 3em;
 }
-
+.download-flex{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 
 footer{
     background-color: #202124;
     width: 100%;
 }
 
-
+.blue{
+    color: white;
+    background-color: #8ea1e1;
+    width: 16%;
+    font-size: 1.2em;
+    margin-top: 50px;
+    margin-bottom: 75px;
+}
 
 .blue-column{
     height: 600px;
-    margin: 150px 0px;
     text-align: center;
     padding-right: 120px;
 }
@@ -124,11 +135,20 @@ footer{
 .pink-column{
     height: 600px;
     flex-basis: 26%;
-    margin: 150px 0px;
     padding-top: 40px;
 }
+
 .bgc{
     background-color: #d3d3d3;
+}
+
+.section{
+    padding: 100px 0px;
+}
+
+.bgc1{
+    background-color: #d3d3d3;
+    height: 1600px;
 }
 
 .section > .pink-column{
@@ -137,13 +157,28 @@ footer{
 }
 
 .last-descriptionbox{
-    background-color: green;
     height: 700px;
     flex-basis: 100%;
-    border: 2px solid black;
-    margin: 50px 0;
-   
+    margin: 100px 0;
+    text-align: center;
 }
+
+.last-descriptionbox > p{
+    padding: 26px 75px;
+    text-align: center;
+}
+.last-descriptionbox > h1{
+    font-size: 3.7em;
+}
+.last-descriptionbox > img{
+    width: 100%;
+    height: auto;
+}
+h2{
+font-size: 2.5em;
+padding-top: 75px;
+}
+
 .info{
     height: 700px;
     flex-basis: 100%;
