--- a/style.css
+++ b/style.css
@@ -46,7 +46,6 @@ ul{
 }
 
 .login{
-    
     display: flex;
     justify-content: flex-end;
 }
@@ -101,7 +100,6 @@ p{
     text-align: center;
     width: 80%;
     padding-top: 100px;
-    display: flex;
 }
 .pink-column > h1{
     font-size: 3em;
@@ -180,31 +178,89 @@ padding-top: 75px;
 }
 
 .info{
-    height: 700px;
+    height: 430px;
     flex-basis: 100%;
     padding:20px 0 ;
+    color: white;
 }
-.first-column{
-    height: 100%;
-    flex-basis: 40%;
-    background-color: #f08080;
-    border: 2px solid black;
+.first-column-flex{
+    height: 400px;
+    flex-basis: 36%;
+    border-bottom: 1px solid #7289da;
+    display: flex;
+    flex-direction: column;
+    padding: 50px 10px;
 }
 .column{
-    height: 100%;
+    height: 400px;
     flex-basis: 20%;
-    background-color: #20b2aa;
-    border: 2px solid black;
+    border-bottom: 1px solid #7289da;
+    padding-top: 50px;
+    font-size: 1.2em;
+    display: flex;
+    flex-direction: column;
+
 }
 .column-footer{
     height: 100px;
-    background-color: #7fffd4;
-    border: 2px solid black;
+    display: flex;
+    justify-content: space-between;
+    
 }
-.column-footer {
-    align-items: center;
-    justify-content: space-between; 
-}
+
  .nav{
     flex-basis: 60%;
  }
+ .language{
+    padding: 20px 0px;
+    display: flex;
+    align-items: center;
+ }
+
+.language > img{
+    height: 20px;
+    padding-right: 5px;
+}
+
+.language::after{
+    content: '\25bc';
+}
+
+.external{
+    display: flex;
+    justify-content: space-between;
+    width: 35%;
+}
+
+.title{
+    color: #7289da;
+}
+.column > div{
+    padding: 5px 0;
+}
+.but-reg{
+    color: white;
+    background-color: #8ea1e1;
+    width: 8%;
+    font-size: 1em;
+    padding: 20px;
+    height: 20px;
+    border-radius: 35px;
+    display: flex;
+    align-items: center;
+    color: white;
+    margin-top: 15px;
+    justify-content: center;
+}
+.first-column-flex > h1{
+    color: #7289da;
+}
+
+.wave{
+    display: block;
+    color: #d3d3d3;
+}
+
+.upside-down{
+    rotate: 0.5turn;
+}
