--- a/style.css
+++ b/style.css
@@ -176,7 +176,12 @@ h2{
 font-size: 2.5em;
 padding-top: 75px;
 }
-
+.stars{
+    background-image: url(img/stars.svg);
+    background-size: contain;
+    background-repeat: no-repeat;
+    width: 56%;
+}
 .info{
     height: 430px;
     flex-basis: 100%;
